<?xml version="1.0"?>
<package format="2">
  <name>m545_volumetric_mapping</name>
  <version>0.0.0</version>
  <description>Volumetric mapping for m545</description>

  <maintainer email="jelavice@ethz.ch">Edo Jelavic</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <author email="jelavice@ethz.ch">Edo Jelavic</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>open3d_conversions</depend>
  <depend>open3d_catkin</depend>
  <depend>eigen_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
 

</package>
