<?xml version="1.0"?>
<package format="2">
  <name>m545_volumetric_mapping_msgs</name>
  <version>0.0.0</version>
  <description>Messages for the m545 mapping package</description>

  <author email="ej@ethz.ch">ej</author>
  <maintainer email="ej@ethz.ch">ej</maintainer>
  

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>
</package>
