cmake_minimum_required(VERSION 3.18)
project(open3d_catkin)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_compile_options(-O2)


set(CATKIN_PACKAGE_DEPENDENCIES
  roscpp
  roslib
)

find_package(catkin REQUIRED COMPONENTS
  ${CATKIN_PACKAGE_DEPENDENCIES}
)

# Catkinization of open3D
include(ExternalProject)

file(MAKE_DIRECTORY ${CATKIN_DEVEL_PREFIX}/include)
file(MAKE_DIRECTORY ${CMAKE_SOURCE_DIR}/open3d)
file(MAKE_DIRECTORY ${CMAKE_SOURCE_DIR}/open3d/build)

ExternalProject_Add(open3d
  GIT_REPOSITORY "https://github.com/isl-org/Open3D"
  GIT_TAG "v0.14.0"
  GIT_SUBMODULES_RECURSE "true"
  GIT_PROGRESS "true"
  PREFIX "${CMAKE_SOURCE_DIR}"
  SOURCE_DIR "${CMAKE_SOURCE_DIR}/open3d"
  BINARY_DIR "${CMAKE_SOURCE_DIR}/open3d/build"
  # CMAKE_ARGS 
  #     -DBUILD_SHARED_LIBS=ON
  #     -DCMAKE_BUILD_TYPE:STRING="RelWithDebInfo"
  #     -DUSE_SYSTEM_EIGEN3=OFF
  #     -DGLIBCXX_USE_CXX11_ABI=ON
  #     -DBUILD_PYTHON_MODULE=OFF
  #     -DUSE_SYSTEM_JPEG=ON
  #     -DUSE_SYSTEM_JSONCPP=ON
  CMAKE_COMMAND cmake -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=RelWithDebInfo -DUSE_SYSTEM_EIGEN3=OFF -DGLIBCXX_USE_CXX11_ABI=ON -DBUILD_PYTHON_MODULE=OFF -DCMAKE_INSTALL_PREFIX=${HOME}/Programs/open3d_install "${CMAKE_SOURCE_DIR}/open3d"
  BUILD_COMMAND make -j${NCPU}
  INSTALL_COMMAND bash "-c" "cp -r ../open3d/cpp/open3d ${CATKIN_DEVEL_PREFIX}/include && cp lib/*.a ${CATKIN_DEVEL_PREFIX}/lib && cp lib/*.so ${CATKIN_DEVEL_PREFIX}/lib"
)


catkin_package(
  INCLUDE_DIRS 
    ${CATKIN_DEVEL_PREFIX}/include
  LIBRARIES
    open3d
  CATKIN_DEPENDS
)

#############
## INSTALL ##
#############

install(DIRECTORY ${CATKIN_DEVEL_PREFIX}/include/open3d
  DESTINATION ${CATKIN_GLOBAL_INCLUDE_DESTINATION}
)

install(DIRECTORY ${CATKIN_DEVEL_PREFIX}/lib/
  DESTINATION ${CATKIN_GLOBAL_LIB_DESTINATION}
)
