cmake_minimum_required(VERSION 3.18)
project(open3d_catkin)

find_package(catkin REQUIRED)

set(CATKIN_PACKAGE_DEPENDENCIES
  roscpp
  roslib
)

find_package(catkin REQUIRED COMPONENTS
  ${CATKIN_PACKAGE_DEPENDENCIES}
)

# Catkinization of open3D
include(ExternalProject)
file(MAKE_DIRECTORY ${CATKIN_DEVEL_PREFIX}/include)

ExternalProject_Add(open3d
  GIT_REPOSITORY "https://github.com/isl-org/Open3D"
  GIT_TAG "v0.15.1"
  GIT_SUBMODULES_RECURSE "true"
  GIT_PROGRESS "true"
  CMAKE_CACHE_ARGS "-DCMAKE_POSITION_INDEPENDENT_CODE:BOOL=true"
  PREFIX "${CMAKE_SOURCE_DIR}"
  SOURCE_DIR "${CMAKE_SOURCE_DIR}/open3d"
  BINARY_DIR "${CMAKE_SOURCE_DIR}/open3d/tmp"
  # CMAKE_ARGS 
  #     -DBUILD_SHARED_LIBS=ON
  #     -DCMAKE_BUILD_TYPE:STRING="RelWithDebInfo"
  #     -DUSE_SYSTEM_EIGEN3=OFF
  #     -DGLIBCXX_USE_CXX11_ABI=ON
  #     -DBUILD_PYTHON_MODULE=OFF
  #     -DUSE_SYSTEM_JPEG=ON
  #     -DUSE_SYSTEM_JSONCPP=ON
  CMAKE_COMMAND cmake -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=RelWithDebInfo -DUSE_SYSTEM_EIGEN3=OFF -DGLIBCXX_USE_CXX11_ABI=ON -DBUILD_PYTHON_MODULE=OFF -DCMAKE_INSTALL_PREFIX=${HOME}/Programs/open3d_install "${CMAKE_SOURCE_DIR}/open3d"
  BUILD_COMMAND make -j${NCPU}
  INSTALL_COMMAND bash "-c" "cp -r ${CMAKE_SOURCE_DIR}/open3d/cpp/open3d ${CATKIN_DEVEL_PREFIX}/include && cp ${CMAKE_SOURCE_DIR}/open3d/tmp/lib/*/*.a ${CATKIN_DEVEL_PREFIX}/lib/ && cp ${CMAKE_SOURCE_DIR}/open3d/tmp/lib/*/*.so ${CATKIN_DEVEL_PREFIX}/lib/"
)


catkin_package(
  INCLUDE_DIRS 
    ${CATKIN_DEVEL_PREFIX}/include
  LIBRARIES
    ${CATKIN_DEVEL_PREFIX}/lib/libOpen3D.so
  CATKIN_DEPENDS
)

#############
## INSTALL ##
#############

install(DIRECTORY ${CATKIN_DEVEL_PREFIX}/include/
  DESTINATION ${CATKIN_GLOBAL_INCLUDE_DESTINATION}
)

install(DIRECTORY ${CATKIN_DEVEL_PREFIX}/lib/
  DESTINATION ${CATKIN_GLOBAL_LIB_DESTINATION}
)
