<?xml version="1.0"?>
<package format="2">
  <name>open3d_catkin</name>
  <version>0.0.0</version>
  <description>Open3D catkin</description>

  <maintainer email="jelavice@ethz.ch">Edo Jelavic</maintainer>

  <license>TODO</license>

  <author email="jelavice@ethz.ch">Edo Jelavic</author>
  <author email="nubertj@ethz.ch">Julian Nubert</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
 
</package>
