<?xml version="1.0"?>
<package format="2">
  <name>open3d_slam_rviz_plugin</name>
  <version>0.0.0</version>
  <description>RViz plugin for displaying submaps and trajectories.</description>
  <maintainer email="ej@ethz.ch">EJ</maintainer>
  <license>BSD</license>
  <author>EJ</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>rviz</depend>
  <depend>open3d_slam_msgs</depend>
  <depend>open3d_catkin</depend>
  <depend>open3d_conversions</depend>
  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
