<?xml version="1.0"?>
<package format="2">
  <name>open3d_slam_utils</name>
  <version>0.0.0</version>
  <description>Utilities for slam</description>

  <maintainer email="peyschen@ethz.ch">Pol Eyschen</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <author email="peyschen@ethz.ch">Pol Eyschen</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>open3d_catkin</depend>
  <depend>eigen</depend>

</package>
