<package format="2">
    <name>realtime_meshing</name>
    <version>0.0.0</version>
    <description>The realtime_meshing package</description>
    <maintainer email="peyschen@ethz.ch">Pol Eyschen</maintainer>
    <license>Proprietary</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>open3d_catkin</depend>
    <depend>open3d_conversions</depend>
    <depend>eigen_conversions</depend>
    <depend>open3d_slam_utils</depend>
</package>